force-app/main/default/objects/Address_History__c/Address_History__c.object-meta.xml
<CustomObject>
    <label>Address History</label>
    <nameField>
        <label>Address History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Address Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>