force-app/main/default/objects/Address_History__c/fields/Area_Locality__c.field-meta.xml
<CustomField>
    <fullName>Area_Locality__c</fullName>
    <label>Area / Locality</label>
    <type>TextArea</type>
</CustomField>