force-app/main/default/objects/Address_History__c/fields/Date_Changed__c.field-meta.xml
<CustomField>
    <fullName>Date_Changed__c</fullName>
    <label>Date Changed</label>
    <type>Date</type>
</CustomField>