force-app/main/default/objects/Address_History__c/fields/Flat_Room_Bunglow_no__c.field-meta.xml
<CustomField>
    <fullName>Flat_Room_Bunglow_no__c</fullName>
    <label>Flat / Room / Bunglow no</label>
    <length>255</length>
    <type>Text</type>
</CustomField>