force-app/main/default/objects/Address_History__c/fields/Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Street_Name__c</fullName>
    <label>Street Name</label>
    <type>TextArea</type>
</CustomField>