force-app/main/default/objects/Address_History__c/fields/Time_Changed__c.field-meta.xml
<CustomField>
    <fullName>Time_Changed__c</fullName>
    <label>Time Changed</label>
    <type>Time</type>
</CustomField>